sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: value !== is not a member of Boolean
      if(plusPetit(i-j,v)!==false){
                         ^